# NeuroForge_SKB-F4_SKB-P1

./: .gitignore  ARCHITECTURE.md  ESG_Platform_Build_Prompt.md  start.sh
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py  scoping.py
backend/app/api/v1/: activities.py  anomalies.py  audit.py  auth.py  dashboards.py  emissions.py  facilities.py  factors.py  health.py  orgs.py  reports.py  scenarios.py  suppliers.py  uploads.py  users.py
backend/app/core/: config.py  llm_client.py
backend/app/db/: migrate_inplace.py  session.py
backend/app/db/models/: __init__.py  activity_data.py  anomaly.py  audit_log.py  emission.py  emission_factor.py  facility.py  organization.py  report.py  report_anchor.py  scenario.py  supplier.py  supplier_submission.py  user.py  user_invite.py
backend/app/schemas/: activity.py  anchor.py  anomaly.py  audit.py  auth.py  dashboard.py  emission.py  facility.py  factor.py  report.py  scenario.py  supplier.py  supplier_submission.py
backend/app/seed/: __main__.py  activity.py  activity_ultratech.py  audit.py  company.py  escalations.py  factors.py  reports.py  submissions.py  suppliers.py  users.py
backend/app/services/: anchoring.py  anomaly_detector.py  assurance.py  audit.py  auth.py  calculation_engine.py  chain_client.py  csv_parser.py  document_parser.py  report_renderer.py  scenario_engine.py  validation.py
contracts/: .env.example  README.md  hardhat.config.js
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  (+2 more)
(+79 files in other folders)
