[project]
name = "carbonlens-backend"
version = "0.1.0"
description = "CarbonLens — ESG Performance & GHG Monitoring backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.3",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.12",
    "openai>=2.0.0",
    "pymupdf>=1.24.0",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.4",
    "reportlab>=4.2.5",
    "jinja2>=3.1.4",
    "httpx>=0.27.2",
    "bcrypt>=4.2.0",
    "python-jose[cryptography]>=3.3.0",
    "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]
chain = [
    "web3>=6.20.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
